[project]
name = "approck-fastapi-utils"
version = "0.2.1"
description = "Small helpers for FastAPI: JWT header auth, JSON responses, exception handlers, and Pydantic query types."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aleksey Dalekin", email = "adalekin@gmail.com" }]
requires-python = ">=3.10"
keywords = ["fastapi", "pydantic", "jwt", "sqlalchemy", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.109.2",
    "pydantic>=2.4.1",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
sqlalchemy = ["sqlalchemy>=2.0.0"]

[project.urls]
Homepage = "https://github.com/adalekin/approck-fastapi-utils"
Repository = "https://github.com/adalekin/approck-fastapi-utils"
Issues = "https://github.com/adalekin/approck-fastapi-utils/issues"
Changelog = "https://github.com/adalekin/approck-fastapi-utils/releases"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.2.0",
    "ruff>=0.4.4",
]

[tool.hatch.build.targets.sdist]
include = ["/approck_fastapi_utils", "/README.md", "/LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["approck_fastapi_utils"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "approck_fastapi_utils.types"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
